Fixed large text to never overflow into picture - will now scale deping on window size

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    border: 2px solid red; 
+    border: 1px solid red; 
     margin: 0;
     padding: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -56,7 +56,7 @@ h1 {
 .card-container {
     display: flex;
     flex-direction: column;
-    padding: 100px 0 100px 0;
+    padding: 80px 0 80px 0;
     gap: 5px;
     width: 50%;
 
@@ -71,13 +71,18 @@ button {
 }
 
 h2 {
-    font-size: 48px;
+    display: flex;
+    font-size: 5vw;
 }
 
 p {
     font-size: 18px;
 }
 
-img {
+#image-container {
     width: 50%;
+}
+
+img {
+    width: 100px;
 }
